--- a/src/app/componentes/navbar/navbar.component.scss
+++ b/src/app/componentes/navbar/navbar.component.scss
@@ -3,10 +3,16 @@ nav{
     width: 100%;
     background-color:red  ;
     padding: 1em;
+   
 }
 
 a{
     color: black !important;
+    
+}
+
+ul:nth-last-child(1) li a {
+    margin-right: 6em;
 }
 
 @media only screen and (max-width: 768px) {
