--- a/src/app/componentes/tablas/visualizar-tablas/visualizar-tablas.component.scss
+++ b/src/app/componentes/tablas/visualizar-tablas/visualizar-tablas.component.scss
@@ -14,3 +14,10 @@ h2{
 th{
     background-color: rgb(47, 47, 47) !important;
 }
+
+// Boton guardar pesos nuevos
+
+.botonGuardarPesos{
+    background-color: red;
+    margin-bottom: 5px;
+}
