--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,44 +1,53 @@
 <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" [routerLink]="['/']" (click)="expandirNav()">
         <img src="/assets/imagenes/logoImpacto.png">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" (click)="expandirNav()" *ngIf="comprobarAutentificacion()">
+    <button class="navbar-toggler botoncolapsar collapsed" type="button" 
+        (click)="expandirNav()" *ngIf="comprobarAutentificacion()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
-    <div class="collapse navbar-collapse navbarDiv" id="navbarSupportedContent" *ngIf="comprobarAutentificacion()">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link"  href="/tablas">Tablas </a>
+
+    <div class="collapse navbar-collapse navbarDiv" id="navbarSupportedContent" *ngIf="comprobarAutentificacion()" >
+        <ul class="navbar-nav mr-auto" (click)="expandirNav()" >
+            <li class="nav-item "  [routerLink]="['/tablas']" [routerLinkActive]="'activado'" 
+                *ngIf="(usuarioLogeado.acceso == '1') || (usuarioLogeado.acceso == '2') || (usuarioLogeado.acceso == '5')  || (usuarioLogeado.acceso == '6')  || (usuarioLogeado.acceso == '8')">
+                <a class="nav-link" >Tablas </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item " [routerLink]="['/ejercicios']" [routerLinkActive]="'activado'"
+                *ngIf="(usuarioLogeado.acceso == '1') || (usuarioLogeado.acceso == '2') || (usuarioLogeado.acceso == '5')  || (usuarioLogeado.acceso == '6')  || (usuarioLogeado.acceso == '8')">
                 <a class="nav-link">Ejercicios</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" >Dietas</a>
+            <li class="nav-item " [routerLink]="['/dietas']" [routerLinkActive]="'activado'"
+                *ngIf="(usuarioLogeado.acceso == '1') || (usuarioLogeado.acceso == '3') || (usuarioLogeado.acceso == '5')  || (usuarioLogeado.acceso == '7')  || (usuarioLogeado.acceso == '8')">
+                <a class="nav-link">Dietas</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" >Seguimiento</a>
+            <li class="nav-item " [routerLink]="['/seguimiento']" [routerLinkActive]="'activado'"
+                *ngIf="(usuarioLogeado.acceso == '1') || (usuarioLogeado.acceso == '3') || (usuarioLogeado.acceso == '5')  || (usuarioLogeado.acceso == '7')  || (usuarioLogeado.acceso == '8')">
+                <a class="nav-link">Seguimiento</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" >Clases</a>
+            <li class="nav-item " [routerLink]="['/clases']" [routerLinkActive]="'activado'"
+                *ngIf="(usuarioLogeado.acceso == '1') || (usuarioLogeado.acceso == '4') || (usuarioLogeado.acceso == '6')  || (usuarioLogeado.acceso == '7')  || (usuarioLogeado.acceso == '8')">
+                <a class="nav-link">Clases</a>
             </li>
+            <li class="nab-item " [routerLink]="['/usuarios']" [routerLinkActive]="'activado'" *ngIf="usuarioLogeado.acceso == '1'">
+                <a class="nav-link"  >Usuarios</a>
+            </li>
+            
         </ul>
-        <ul  class="navbar-nav ">
+        <ul class="navbar-nav ">
             <li class="nav-item dropdown ">
                 <a class="nav-link dropleft-toggle " id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
-                    
+
                     <i class="fas fa-user fa-2x ml-2"></i>
                     {{usuarioLogeado.nombre}}
-                    
+
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Cambiar contraseña</a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"  (click)="expandirNav()">
+                    <a class="dropdown-item" [routerLink]="['/usuarios/datosUsuario',usuarioLogeado.id]">Cambiar contraseña</a>
                     <a class="dropdown-item" href="/" (click)="cerrarSesion()">Cerrar sesion</a>
                 </div>
             </li>
         </ul>
     </div>
 </nav>
-
