--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
-    <a class="navbar-brand" [routerLink]="['/']" (click)="expandirNav()">
+    <a class="navbar-brand" [routerLink]="['/']">
         <img src="/assets/imagenes/logoImpacto.png">
     </a>
     <button class="navbar-toggler botoncolapsar collapsed" type="button" 
