--- a/src/app/componentes/ejercicios/visualizar-ejercicios/detalles-ejercicio/detalles-ejercicio.component.scss
+++ b/src/app/componentes/ejercicios/visualizar-ejercicios/detalles-ejercicio/detalles-ejercicio.component.scss
@@ -24,3 +24,9 @@ h2 {
     justify-content: center;
     margin-top: 2em;
 }
+
+
+.botonGuardarEjercicio {
+    background-color: red;
+    margin-bottom: 5px;
+}
